After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 163546 - generalize dvd-event API
generalize dvd-event API
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: GStreamer backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Maintainer alias for GStreamer component of Totem
Maintainer alias for GStreamer component of Totem
: 310645 319765 371579 (view as bug list)
Depends on: 481070 540887 540890
Blocks:
 
 
Reported: 2005-01-10 11:41 UTC by Ronald Bultje
Modified: 2013-03-15 15:36 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Ronald Bultje 2005-01-10 11:41:51 UTC
The DVD event API is used to seek across titles, chapters and such. The title
seeks are currently unused (since that's handled by menus; which GStreamer's
backend doesn't support). The checks for enabling the chapter menu-items are a
simple is-dvd.

This could be generalized, so that VCD menus work, and so that we can use add
menu items as an alternative way to seek in supporting streams (quickkeys
rock!). This can be DVDs, but also audio-CDs and chained Oggs. Maybe we can use
this for audio files with supporting .cue files as well.

Basically, we'd need a function to query whether seeking across titles/chapters
(or whatever we call this) is supported in the stream (DVD: both yes, VCD,
chained ogg, audio CD: only title - depending on backend of course), and the
dvd_event function would need to be renamed to be somewhat less DVD-specific.
Comment 1 Bastien Nocera 2005-03-08 11:01:23 UTC
Ronald, could you give away a couple of test streams/files (thinking of chained
oggs, mkv files, etc.) that would support title/chapter seeking?
Comment 2 Bastien Nocera 2005-03-27 18:58:52 UTC
Ronald, any news on those test streams?
Comment 3 Ronald Bultje 2005-03-30 12:01:40 UTC
Ogg: http://gstreamer.freedesktop.org/media/small/multi.ogg
Matroska: can't find any right now...
Comment 4 Bastien Nocera 2005-10-23 00:40:43 UTC
*** Bug 310645 has been marked as a duplicate of this bug. ***
Comment 5 Bastien Nocera 2005-10-26 14:29:56 UTC
*** Bug 319765 has been marked as a duplicate of this bug. ***
Comment 6 Reviczky Ádám János 2005-10-26 14:52:58 UTC
Here is a matroska sample with chapters (chapters works well with Media Player
Classic on Windows):
http://www.matroska.org/samples/matrix/Matrix.Reloaded.Trailer-RV9-Karl640x432_HE_AAC_subtitled_chapters.mkv

(http://www.matroska.org/samples/matrix/index.html)
Comment 7 Bastien Nocera 2006-03-23 00:02:44 UTC
This is another file with bookmarks (and broken video in xine-lib):
http://downloads.oreilly.com/make/MAKE_2005-07-18.m4b
Comment 8 Bastien Nocera 2006-09-11 20:15:52 UTC
We can use XINE_STREAM_INFO_HAS_CHAPTERS.
Comment 9 Bastien Nocera 2006-09-11 22:58:42 UTC
This bug is for Matroska support:
http://sourceforge.net/tracker/index.php?func=detail&aid=1555636&group_id=9655&atid=109655
Comment 10 Bastien Nocera 2006-11-06 16:16:44 UTC
*** Bug 371579 has been marked as a duplicate of this bug. ***
Comment 11 Olaf Leidinger 2008-06-30 08:51:49 UTC
Any news on this one? Currently on linux/*BSD only vlc supports chapters with a nice dropdown-list (but it badly crashes for me when using mkv files), mplayer recently got chapters support for matroska files but no nice list, only "go to next/previous chapter". So it would be nice if totem could support chapters of matroska files.

Any hint of what had to be done to add support? Are changes in gstreamer required?
Comment 12 Bastien Nocera 2008-06-30 09:01:08 UTC
(In reply to comment #11)
<snip>
> Any hint of what had to be done to add support? Are changes in gstreamer
> required?

Yes, turns out it's not implemented in GStreamer either.
Comment 13 Bastien Nocera 2013-03-14 23:31:59 UTC
There's an example file for matroska at:
http://code.google.com/p/xnoise/issues/detail?id=91
Comment 14 Bastien Nocera 2013-03-15 15:36:55 UTC
Fixed in master. This only currently works for Matroska and CUE files (as can be seen from the blocker bugs).

commit 20800ab4f5bdd68e23629805881e3890ff785000
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Mar 15 15:44:20 2013 +0100

    backend: Add support for non-DVD chapters
    
    We can now use the previous/next buttons and shortcuts to
    navigate chapters within Matroska files (and within other supported
    file types).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=163546