backend: Add support for non-DVD chapters

We can now use the previous/next buttons and shortcuts to
navigate chapters within Matroska files (and within other supported
file types).

https://bugzilla.gnome.org/show_bug.cgi?id=163546